mvvm structure and home fxml