@@ -27,11 +27,24 @@ dependencies {
 
     // JMetro javafx theme
     implementation 'org.jfxtras:jmetro:11.6.14'
+
+    // MvvmFx framework
+    implementation 'de.saxsys:mvvmfx:1.8.0'
+
+    // Guice DI framework
+    implementation 'org.slf4j:slf4j-api:1.7.30'
+    implementation 'org.slf4j:slf4j-simple:1.7.30'
+    implementation 'com.google.inject:guice:4.2.3'
+
+    // MvvmFx DI support
+    implementation 'de.saxsys:mvvmfx-guice:1.8.0'
 }
 
 application {
     // Define the main class for the application.
     mainClass = 'episim.App'
+    // Remove Guice reflective access warnings
+    applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 }
 
 javafx {
